Fix spacing of Japanese text on extensions page.

--- a/presentation.css
+++ b/presentation.css
@@ -162,7 +162,7 @@ footer img.logo {
   margin-bottom: 2em;
 }
 .extensions-page .extension-jp {
-  margin-top: -2em;
+  margin-top: -1.5em;
   /* margin-left: 0.5em; */
   margin-bottom: 0.5em;
 }
